<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="5"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_message"
        android:actionLayout="@layout/menu_view_notf"
        android:orderInCategory="10"
        android:title="Message"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="15"
        android:title="Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_action_overflow">

        <menu>
            <item
                android:id="@+id/menu_suggest"
                android:title="@string/action_suggest" />
            <item
                android:id="@+id/menu_setting"
                android:title="@string/action_setting" />
            <item
                android:id="@+id/menu_elearning"
                android:title="@string/action_elearning" />
            <item
                android:id="@+id/menu_etest"
                android:title="@string/action_etest" />
            <item
                android:id="@+id/menu_logout"
                android:title="@string/action_logout" />
        </menu>

    </item>
</menu>
