<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_text_color"
    android:padding="10dp"
    android:id="@+id/rl_register">

    <TextView
        android:id="@+id/tv_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/et_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="39dp"
        android:text="@string/code_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/shape_edittext_border"
        android:hint="@string/code_et_hint"
        android:padding="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_code"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_code_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_button_bg"
            android:text="@string/code_btn_reg"
            android:textColor="@color/bg_color" />

        <TextView
            android:id="@+id/tv_code_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/code_tv_link"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_code_cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_code_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="Sadeem Plus"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>