<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color"
    android:id="@+id/layout_root"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">

                <TextView
                    android:id="@+id/tv_sugges"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/suggest_title"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/dark_text_color" />

                <EditText
                    android:id="@+id/et_sugges"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_edittext_border"
                    android:gravity="top|left"
                    android:hint="@string/suggest_et_hint"
                    android:padding="10dp"
                    style="@style/edittextstyle"
                    android:theme="@style/edittextstyle"/>

                <Button
                    android:id="@+id/btn_sugges_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_btn_bg_suggest"
                    android:gravity="center"
                    android:text="@string/suggest_btn_send"
                    android:textColor="@color/bg_color" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>